add english translation

--- a/hydrodynamic-cleaning.html
+++ b/hydrodynamic-cleaning.html
@@ -46,16 +46,16 @@
                 <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
@@ -178,9 +178,8 @@
                 </div>
               </div>
               <div class="hydrodynamic__col hydrodynamic__col--4">
-                <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Renowacja konstrukcji</h3>
-                <p class="hydrodynamic__col-text">Dysponujemy szerokim wachlarzem usług dostosowanych
-                  do poszczególnych branż. Posiadając wydajny, specjalistyczny sprzęt oraz zespół doświadczonych, oddanych swojej pracy ekspertów, oferujemy usługi w najwyższym, europejskim standardzie. Przeprowadzimy dla Państwa między innymi usługi czyszczenia i malowania konstrukcji stalowych.</p>
+                <h3 class="hydrodynamic__col-title hydrodynamic__col-title--2">Construction renovation</h3>
+                <p class="hydrodynamic__col-text">We have a wide range of services tailored to individual industries. With efficient, specialized equipment and a team of experienced experts, we offer services of the highest European standard.We will provide you with, among others, cleaning and painting services for steel structures.</p>
               </div>
             </div>
           </div>
@@ -189,16 +188,18 @@
       <section class="container">
         <div class="hydrodynamic__row hydrodynamic__row--4">
           <div class="hydrodynamic__col hydrodynamic__col--5">
-            <h3 class="hydrodynamic__col-title hydrodynamic__col-title--3">Specjalistyczna wiedza inżynierska - rozwiązania szyte na miarę</h3>
-            <p class="hydrodynamic__col-text">W wielu przypadkach problemu powstającego podczas procesu produkcyjnego nie można rozwiązać standardową metodą dostępną na rynku. Niezbędne jest wtedy innowacyjne podejście do zadania oraz opracowanie kompleksowego projektu jego wykonania. Nasz wykształcony i doświadczony zespół chętnie pomoże rozwiązać każdy problem związany z zabrudzeniem! Branże w których realizujemy usługi to m.in.:</p>
+            <h3 class="hydrodynamic__col-title hydrodynamic__col-title--3">Tailor - made solutions</h3>
+            <p class="hydrodynamic__col-text">In many cases, a problem arising during the production process and cannot be solved by a standard method available on the market. 
+              It is then necessary to have an individual approach to the task and to develop a comprehensive project of its implementation. Our educated and experienced team will be happy to help you solve any problem related to dirt!
+              Industries in which we provide services include:</p>
             <ul class="hydrodynamic__col-list">
-              <li class="hydrodynamic__col-item">Przemysł Petrochemiczny</li>
-              <li class="hydrodynamic__col-item">Przemysł Chemiczny</li>
-              <li class="hydrodynamic__col-item">Przemysł Spożywczy</li>
-              <li class="hydrodynamic__col-item">Energetyka</li>
-              <li class="hydrodynamic__col-item">Przemysł Automotive</li>
-              <li class="hydrodynamic__col-item">Przemysł Hutniczy</li>
-              <li class="hydrodynamic__col-item">Produkcja Papieru</li>
+              <li class="hydrodynamic__col-item">Petrochemical Industry</li>
+              <li class="hydrodynamic__col-item">Chemical industry</li>
+              <li class="hydrodynamic__col-item">Food industry</li>
+              <li class="hydrodynamic__col-item">Power engineering</li>
+              <li class="hydrodynamic__col-item">Automotive industry</li>
+              <li class="hydrodynamic__col-item">Metallurgical Industry</li>
+              <li class="hydrodynamic__col-item">Paper Production</li>
             </ul>
           </div>
           <div class="hydrodynamic__col hydrodynamic__col--6">
@@ -216,7 +217,7 @@
   <!-- services -->
   <section class="services">
     <section class="container">
-      <h2 class="services__title">Nasze usługi</h2>
+      <h2 class="services__title">Our services</h2>
       <div class="services__wrapper">
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -225,10 +226,10 @@
               <source srcset="images/img__2.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__2.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie urządzeń
-              elektrycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Cleaning of electrical 
+              appliances</figcaption>
           </figure>
-          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -238,10 +239,10 @@
               <source srcset="images/img__5.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__5.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Pomiary termowizyjne
-              i elektryczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Thermovision 
+              and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -250,10 +251,10 @@
               <source srcset="images/img__6.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__6.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Konserwacja urządzeń
-              elektroenergetycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Maintenance of electrical 
+              equipment</figcaption>
           </figure>
-          <a href="konserwacja.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="maintenance.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -262,77 +263,78 @@
               <source srcset="images/img__4.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__4.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              popożarowe</figcaption>
+            <figcaption class="services__wrapper__box-title">After-fire 
+              cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
   </section>
   <!-- end of services -->
 
-  <!-- footer -->
-  <footer class="footer">
-    <section class="container">
-      <div class="footer-content">
-        <div class="footer-content__top">
-          <figure class="footer-content__top-left">
-            <img src="images/logo.svg">
-          </figure>
-          <figure class="footer-content__top-right">
-            <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-            <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
-            <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-            <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
-          </figure>
-        </div>
-        <div class="footer-content__bottom">
-          <div class="footer-content__bottom-left">
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
-              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
-              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
-            </div>
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
-                01-320 Warszawa</span>
-              </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
-                00-819 Warszawa
-              </span>
-              </div>
-            </div>
+<!-- footer -->
+<footer class="footer">
+  <section class="container">
+    <div class="footer-content">
+      <div class="footer-content__top">
+        <figure class="footer-content__top-left">
+          <img src="images/logo.svg">
+        </figure>
+        <figure class="footer-content__top-right">
+          <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+          <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+          <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
+          <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+        </figure>
+      </div>
+      <div class="footer-content__bottom">
+        <div class="footer-content__bottom-left">
+          <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
+            <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
+            <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
+            <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
           </div>
-          <div class="footer-content__bottom-center">
-            <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
-              <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
-              </a>
-              <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+          <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
+            <div class="footer-content__bottom-left__details-wrap">
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+              <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+              01-320 Warszawa</span>
             </div>
-          </div>
-          <div class="footer-content__bottom-right">
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+            <div class="footer-content__bottom-left__details-wrap">
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
+              <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
               00-819 Warszawa
+            </span>
             </div>
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-              <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
-            </div>
+          </div>
+        </div>
+        <div class="footer-content__bottom-center">
+          <div class="footer-content__bottom-center__content">
+            <h4 class="footer-content__bottom-center__title">Find us</h4>
+            <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
+            </a>
+            <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+          </div>
+        </div>
+        <div class="footer-content__bottom-right">
+          <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
+            <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
+            00-819 Warszawa
+          </div>
+          <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
+            <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
+              KRS: 0000257515, District Court for the Capital City of
+              Warsaw, XII Commercial Division of the National
+              Court Register NIP: 5213388077, REGON: 140555502
+              Share capital: PLN 50,000 (paid up in full)</span>
           </div>
         </div>
       </div>
-    </section>
-  </footer>
-  <!-- end of footer -->
+    </div>
+  </section>
+</footer>
+<!-- end of footer -->
 </section>
 <!-- end of wrapper -->
 
