--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                       <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
-                      <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
+                      <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                     </li>
                     <li class="menu-submenu__item">
                       <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
