--- a/maintenance.html
+++ b/maintenance.html
@@ -53,7 +53,7 @@
                     <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
@@ -267,7 +267,7 @@
             <figcaption class="services__wrapper__box-title">After-fire 
               cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
