--- a/after-fire-cleaning.html
+++ b/after-fire-cleaning.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 
@@ -56,7 +56,7 @@
                     </a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
                     </a>
                   </li>
                   <li class="menu-submenu__item">
