--- a/cleaning.html
+++ b/cleaning.html
@@ -16,7 +16,7 @@
   <link rel="stylesheet" href="css/style.css">
 
   <!-- Font Awesome Icons -->
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.14.0/css/all.css">
 </head>
 <body>
 
@@ -56,7 +56,7 @@
                     <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
                     <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
@@ -282,7 +282,7 @@
             <figcaption class="services__wrapper__box-title">After-fire 
               cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-pozarowe.html" role="button" class="services__wrapper__box-btn">More</a>
+          <a href="after-fire-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
