add english translation

--- a/after-fire-cleaning.html
+++ b/after-fire-cleaning.html
@@ -41,27 +41,22 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
@@ -141,8 +136,8 @@
     <section class="container">
       <div class="fire-cleaning__row fire-cleaning__row--1">
         <div class="fire-cleaning__col fire-cleaning__col--first fire-cleaning__col--space1">
-          <h2 class="fire-cleaning__col-title">Czyszczenie popożarowe</h2>
-          <p class="fire-cleaning__col-text">W wielu zakładach wyeliminowaliśmy potrzebę wymiany nawet do 90% podzespołów. Oszczędności przy wykorzystaniu naszej technologii do usuwania skutków pożaru mogą sięgać kwot o bardzo dużej wartości.</p>
+          <h2 class="fire-cleaning__col-title">After-fire cleaning</h2>
+          <p class="fire-cleaning__col-text">We have the skills and experience, supported by large orders, in removing the effects of fires. Savings obtained using our technology can reach very significant sums of money. The use of 3NS methods eliminates the need to replace up to 90% of components.</p>
         </div>
         <div class="fire-cleaning__col fire-cleaning__col--second fire-cleaning__col--space2">
           <div class="fire-cleaning__graphics fire-cleaning__graphics--1">
@@ -155,8 +150,7 @@
 
     <div class="fire-cleaning__row fire-cleaning__row--2">
       <div class="fire-cleaning__col fire-cleaning__col--first fire-cleaning__col--space3">
-        <p class="fire-cleaning__col-text">Czas usunięcia awarii wywołanej przez pożar, jest bardzo krótki. Podzespoły można przywrócić do stanu funkcjonalości w czasie krótszym niż wymiana spalonego okablowania.
-          Użyta metoda suchej mieszanki gazów, pozwala na 100% usunięcia sadzy z podzespołów.</p>
+        <p class="fire-cleaning__col-text">Time required to remove the downtime caused by fire is very short. The components can be restored to their functional state in less time than replacement of burnt wiring would require.</p>
       </div>
       <div class="fire-cleaning__col fire-cleaning__col--second fire-cleaning__col--space4">
         <div class="fire-cleaning__graphics fire-cleaning__graphics--2">
@@ -170,7 +164,7 @@
 
     <div class="fire-cleaning__row fire-cleaning__row--3">
       <div class="fire-cleaning__col fire-cleaning__col--first fire-cleaning__col--space5">
-        <p class="fire-cleaning__col-text">Zastosowanie tradycyjnych metod chemicznych, lub wodnych przyspiesza korozję, która może doprowadzić do całkowitej wymiany podzespołów już po 3 miesiącach od realizacji. 3NS nie stosuje wody, która w reakcji ze związkami halogenowymi zwiększa kilkusetkrotnie ich objętość (produkt uboczny spalania izolacji, która powoduje korozję na elementach plastikowych, miedzianych, aluminiowych), wobec czego nie przyspiesza korozji podzespołów.</p>
+        <p class="fire-cleaning__col-text">The dry gas mixture method used allows 100% removal of soot from the components. The method also counteracts corrosion. 3NS does not utilize water, which, in reaction with halogen compounds, a by-product of insulation combustion, causes corrosion of plastic, copper and aluminium components.</p>
       </div>
       <div class="fire-cleaning__col fire-cleaning__col--second fire-cleaning__col--space6">
         <div class="fire-cleaning__graphics fire-cleaning__graphics--3">
@@ -184,8 +178,7 @@
 
     <div class="fire-cleaning__row fire-cleaning__row--4">
       <div class="fire-cleaning__col fire-cleaning__col--first fire-cleaning__col--space7">
-        <p class="fire-cleaning__col-text">Poza samym czyszczeniem i odzyskiwaniem urządzeń usługa obejmuje również ozonowanie, które dezynfekuje powierzchnie
-          i wybawia zapach po sadzy.</p>
+        <p class="fire-cleaning__col-text">In addition to cleaning and repair recovery and repairs, ozone treatment which disinfects files and leaves the smell of soot.</p>
       </div>
       <div class="fire-cleaning__col fire-cleaning__col--second fire-cleaning__col--space8">
         <div class="fire-cleaning__graphics fire-cleaning__graphics--4">
@@ -201,7 +194,7 @@
 
   <section class="services services--bg">
     <section class="container">
-      <h2 class="services__title">Nasze usługi</h2>
+      <h2 class="services__title">Our services</h2>
       <div class="services__wrapper">
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -210,10 +203,10 @@
               <source srcset="images/img__2.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__2.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie urządzeń
-              elektrycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Cleaning of electrical 
+              appliances</figcaption>
           </figure>
-          <a href="czyszczenie.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
 
         <div class="services__wrapper__box">
@@ -223,10 +216,10 @@
               <source srcset="images/img__3.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__3.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Czyszczenie
-              hydrodynamiczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Hydrodynamic 
+              cleaning</figcaption>
           </figure>
-          <a href="czyszczenie-hydrodynamiczne.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="hydrodynamic-cleaning.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -235,10 +228,10 @@
               <source srcset="images/img__6.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__6.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Konserwacja urządzeń
-              elektroenergetycznych</figcaption>
+            <figcaption class="services__wrapper__box-title">Maintenance of electrical 
+              equipment</figcaption>
           </figure>
-          <a href="konserwacja.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="maintenance.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
         <div class="services__wrapper__box">
           <figure class="services__wrapper__box-img">
@@ -247,10 +240,10 @@
               <source srcset="images/img__5.jpg" type="image/jpeg" class="services__wrapper-img">
               <img src="images/img__5.jpg" class="services__wrapper-img" alt="">
             </picture>
-            <figcaption class="services__wrapper__box-title">Pomiary termowizyjne
-              i elektryczne</figcaption>
+            <figcaption class="services__wrapper__box-title">Thermovision 
+              and electrical measurements</figcaption>
           </figure>
-          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">Więcej</a>
+          <a href="pomiary.html" role="button" class="services__wrapper__box-btn">More</a>
         </div>
       </div>
     </section>
@@ -258,65 +251,66 @@
   <!-- end of fire-cleaning -->
 
   <!-- footer -->
-  <footer class="footer">
-    <section class="container">
-      <div class="footer-content">
-        <div class="footer-content__top">
-          <figure class="footer-content__top-left">
-            <img src="images/logo.svg">
-          </figure>
-          <figure class="footer-content__top-right">
-            <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-            <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
-            <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-            <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
-          </figure>
-        </div>
-        <div class="footer-content__bottom">
-          <div class="footer-content__bottom-left">
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
-              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
-              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
-            </div>
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
-                01-320 Warszawa</span>
+    <footer class="footer">
+      <section class="container">
+        <div class="footer-content">
+          <div class="footer-content__top">
+            <figure class="footer-content__top-left">
+              <img src="images/logo.svg">
+            </figure>
+            <figure class="footer-content__top-right">
+              <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+              <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+              <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
+              <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+            </figure>
+          </div>
+          <div class="footer-content__bottom">
+            <div class="footer-content__bottom-left">
+              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
+                <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
+                <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
               </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
+                <div class="footer-content__bottom-left__details-wrap">
+                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+                  <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+                  01-320 Warszawa</span>
+                </div>
+                <div class="footer-content__bottom-left__details-wrap">
+                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
+                  <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+                  00-819 Warszawa
+                </span>
+                </div>
+              </div>
+            </div>
+            <div class="footer-content__bottom-center">
+              <div class="footer-content__bottom-center__content">
+                <h4 class="footer-content__bottom-center__title">Find us</h4>
+                <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
+                </a>
+                <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+              </div>
+            </div>
+            <div class="footer-content__bottom-right">
+              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
+                <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
                 00-819 Warszawa
-              </span>
+              </div>
+              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
+                <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
+                  KRS: 0000257515, District Court for the Capital City of
+                  Warsaw, XII Commercial Division of the National
+                  Court Register NIP: 5213388077, REGON: 140555502
+                  Share capital: PLN 50,000 (paid up in full)</span>
               </div>
             </div>
           </div>
-          <div class="footer-content__bottom-center">
-            <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
-              <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
-              </a>
-              <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
-            </div>
-          </div>
-          <div class="footer-content__bottom-right">
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
-              00-819 Warszawa
-            </div>
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-              <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
-  </footer>
+      </section>
+    </footer>
   <!-- end of footer -->
 </section>
 <!-- end of wrapper-->
